[package]
name = "router"
version = "0.1.0"
authors = ["superLish <s_lisheng@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simple_logger = "1.6.0"
parking_lot = "0.10.2"
tonic = "0.2"
prost = "0.6"
tokio = { version = "0.2", features = ["macros", "time", "rt-core"]}
async-trait = "0.1"
futures = { version = "0.3", features = ["compat", "async-await", "thread-pool"] }
rand = "0.7"


[build-dependencies]
tonic-build = "0.2"